--- a/deep_sort/configs/deep_sort.yaml
+++ b/deep_sort/configs/deep_sort.yaml
@@ -1,9 +1,9 @@
 DEEPSORT:
   REID_CKPT: "deep_sort/deep_sort/deep/checkpoint/ckpt.t7"
-  MAX_DIST: 0.2
-  MIN_CONFIDENCE: 0.3
-  NMS_MAX_OVERLAP: 0.5
+  MAX_DIST: 0.2              # 最大余弦距离，用于级联匹配，如果大于该阈值，则忽略        0.2
+  MIN_CONFIDENCE: 0.45        # 检测结果置信度阈值
+  NMS_MAX_OVERLAP: 1      # 非极大抑制阈值，设置为1代表不进行抑制
   MAX_IOU_DISTANCE: 0.7
-  MAX_AGE: 70
+  MAX_AGE: 200
   N_INIT: 3
-  NN_BUDGET: 100
+  NN_BUDGET: 300             # 每个类别gallery最多的外观描述子的个数，如果超过，删除旧的
